# agentra-dingbot

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SPECS.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  snapshot.yml
backtesting/: monte_carlo.py
config/: portfolio.yaml  strategies.yaml
core/: config.py  orchestrator.py  state.py
dashboard/: app.py
data/: fetcher.py  snapshot.py  websocket_stream.py
deploy/: paper_broker.py
docs/: ARCHITECTURE.md  CLAUDE_CODE_MIGRATION.md  COUNCIL_HANDOFF.md  COUNCIL_PROMPT.md  DASHBOARD.md  FREQTRADE_SETUP.md  FULL_CONTEXT.md  FUTURE_PLANS.md  FUTURE_PLANS_NEXT.md  HANDOFF.md  LESSONS.md  LICENSE_RATIONALE.md  PROGRESS.md  PROGRESS_SNAPSHOT_COUNCIL.md  RESEARCH_NOTES.md  RESEARCH_STEP6_STEP7.md  STEP6_FREQTRADE_PLAN.md  TRADINGVIEW_INTEGRATION.md  TRADINGVIEW_WEBHOOK.md  ZERO_KEY_SETUP.md  index.html
ml/: __init__.py  features.py  freqai_bridge.py  labels.py  model.py
scripts/: run_council.py
strategies/: fear_filter.py  hybrid_decision.py
tests/: conftest.py  test_dashboard.py  test_dashboard_smoke.py  test_dashboard_snapshot.py  test_data_ingestion.py  test_freqtrade_optional.py  test_langgraph_pipeline.py  test_ml_bridge.py  test_portfolio_config.py  test_risk_manager.py  test_step6_backtest.py  test_step7_executor.py  test_ta_agent.py  test_technical_analyst.py
utils/: logger.py  orderbook.py  telegram_alerts.py
(+61 files in other folders)
