[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-superbot"
version = "0.3.0"
description = "Multi-agent BTC/ETH + Polymarket hybrid trading platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Agentic SuperBot Contributors"}]
keywords = ["trading", "crypto", "polymarket", "langgraph", "agents", "bitcoin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.scripts]
superbot = "core.cli:main"
backtest = "backtesting.backtest:main"

[project.optional-dependencies]
dev = ["pytest>=8.3.0","pytest-asyncio>=0.24.0","pytest-cov>=5.0.0","ruff>=0.8.0","mypy>=1.11.0","pre-commit>=3.8.0"]
db  = ["sqlalchemy>=2.0.0,<3.0.0","asyncpg>=0.30.0"]
all = ["agentic-superbot[dev,db]"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
asyncio_mode = "auto"
addopts    = "-q"

[tool.ruff]
line-length    = 100
# oramasys v2 upgrade horizon: Python 3.12+ only.
# UP035 (deprecated typing aliases) and related were auto-fixed in this PR.
# E701/E702 (compound statements) are tracked for a dedicated cleanup pass.
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
]

[tool.setuptools.packages.find]
where = ["src"]
